# HttpIngest

./: .dockerignore  .env.development  .env.example  .env.production  .env.staging  .gitignore  .mailmap  AZURE_RESOURCES_VERIFICATION.md  AzuriteConfig  CLAUDE.md  DEPLOYMENT_RUNBOOK.md  Dockerfile  Dockerfile.containerapp  FEATURES.md  LOGICMONITOR_INTEGRATION_STATUS.md  MIGRATION_QUICK_START.md  PRE_DEPLOYMENT_SUMMARY.md  PRODUCTION_READY.md  README.md  alembic.ini  container-app-config.yaml  containerapp_main.py  docker-compose.yml  function_app.py  load_test_async.py  local.settings.json  main.py  prometheus.yml  pyproject.toml  requirements.txt
.github/workflows/: README.md  deploy.yml  test.yml
alembic/: env.py
alembic/versions/: 20251113_2117-97758cc8fc5d_initial_schema_baseline.py  20251113_2127-fb9b24da90b7_add_normalized_otlp_tables.py  20251114_1941-6f6f6a0c623f_add_materialized_views_for_query_.py  20260124_2042-9eafd921251d_partition_metric_data_by_timestamp.py
azure-devops/: CHECKLIST.md  SETUP.md  azure-pipelines.yml
docs/: LOAD_TESTING.md  api-documentation.md  azure.md  deployment.md  docker.md  ecosystem-integration.md  integrations.md  lessons.md  materialized_views.md  migrations.md  otlp_parser.md  plan.md  precursor-integration-notes.md  python.md  quality-checks-setup.md  quantum-mcp-integration-notes.md  sample-otlp-notes.md  todo.md
docs/deployment/: AZURE_RESOURCES_VERIFICATION.md  DEPLOYMENT_RUNBOOK.md  LOGICMONITOR_INTEGRATION_STATUS.md  MIGRATION_QUICK_START.md  PRE_DEPLOYMENT_SUMMARY.md  PRODUCTION_READY.md
docs/runbooks/: RUNBOOKS.md
monitoring/: dashboard-template.json
scripts/: compact_parquet.py  configure_redis.sh  deploy.sh  migrate.py  migrate_to_datalake.py  run_load_test.sh  setup_monitoring.sh  test_datalake_ingestion.py  verify_features.py
src/: aggregator.py  anomaly_detector.py  config.py  data_processor.py  data_processor_async.py  datalake_writer.py  exporters.py  feature_engineering.py  function_app.py  function_app.py.backup  host.json  hot_cache_manager.py  ingestion_router.py  ml_service.py  otlp_parser.py  predictor.py  realtime.py  requirements.txt  secrets.py  synapse_client.py  tracing.py
tests/: __init__.py  benchmark_ml_endpoints.py  conftest.py  test_aggregator.py  test_anomaly_detector.py  test_compression.py  test_config.py  test_containerapp_async.py  test_data_processor.py  test_datalake_components.py  test_e2e_integration.py  test_exporters.py  test_feature_engineering.py  test_function_app.py  test_infrastructure.py  test_materialized_views.py  test_migrations.py  test_ml_auth.py  test_ml_endpoints.py  test_ml_integration.py  test_normalized_schema.py  test_otlp_parser.py  test_predictor.py  test_query_endpoints.py  test_realtime.py  test_secrets.py  test_synapse_timeout.py
tests/fixtures/: sample_otlp.json
tests/load/: locustfile.py
